Fix embedded video layout issues
Also sets max height for all image and video content displayed at the top.

Addresses part of zploskey/ExperimentalBeijing#4. Issues with the
Creative Commons iframe not properly loading some of its images will
need to be addressed later.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -761,9 +761,9 @@ th {
         display: inline-block;
         vertical-align: middle;
     }
-    #item-top-media img, embed {
+    #item-top-media {
         max-width: 100%;
-        max-height: 500px;
+        max-height: 699px;
     }
     .placard {
         max-width: 500px;
