--- a/css/sass/_screen_40em_min.scss
+++ b/css/sass/_screen_40em_min.scss
@@ -58,7 +58,7 @@ div#contribution-type-form div.inputs {@include span-columns (9 omega, 12);}
 
 #item-top {
     #item-top-media {
-        max-width: 500px;
+        max-width: 675px;
         margin-right: 50px;
     }
 }
